fix: hide ChatFoldersDesktop on mobile

--- a/src/components/left/main/ChatFoldersDesktop.module.scss
+++ b/src/components/left/main/ChatFoldersDesktop.module.scss
@@ -15,6 +15,10 @@
       opacity: 0.25;
     }
   }
+
+.ChatFoldersDesktop {
+
+}
 ////
 ////}
 //
@@ -47,7 +51,12 @@
   scrollbar-width: none;
   padding-top: 10px;
   padding-bottom: 10px;
+
+  @media (max-width: 925px) {
+    display: none !important;
+  }
 }
+
 .Tab {
   position: relative;
   display: flex;
